samples/_failures_safe/1761506617_0ba4bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c8e9cff.c: In function ‘main’:
./samples/SAFE/__tmp_8c8e9cff.c:152:5: error: expected ‘,’ or ‘;’ at end of input
  152 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_8c8e9cff.c:152:5: error: expected declaration or statement at end of input
